--- a/Portfolio/src/styles.scss
+++ b/Portfolio/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --primary: #69F0AE;
+    --secondary: white;
+    --bgprimary: #263238;
+    --bgsecondary: #212121;
+}
+
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: var(--bgsecondary);
+}
