feat: add Hygraph integration

--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -24,7 +24,7 @@
 
 <footer class="footer">
     <div class="footer-text">
-        <p>Copyright &copy; 2023 by Codehal | All Right Reserved.</p>
+        <p>Copyright &copy; 2023 by Smayke95 | All Right Reserved.</p>
     </div>
 
     <div class="footer-iconTop">
