--- a/src/src/app/components/contact/contact.component.scss
+++ b/src/src/app/components/contact/contact.component.scss
@@ -3,6 +3,7 @@
 .contact {
     min-height: 90vh;
     padding-bottom: 7rem;
+    background: $second-bg-color;
 
     form {
         max-width: 70rem;
