--- a/src/src/styles.scss
+++ b/src/src/styles.scss
@@ -28,6 +28,89 @@ html {
         span {
             color: $main-color;
         }
+
+        .heading {
+            position: relative;
+            font-size: 5rem;
+            margin-bottom: 3rem;
+            text-align: center;
+        }
+
+        .btn-box {
+            position: relative;
+            display: flex;
+            justify-content: space-around;
+            width: 34.5rem;
+            height: 5rem;
+
+            .btn {
+                position: relative;
+                display: inline-flex;
+                justify-content: center;
+                align-items: center;
+                width: 15rem;
+                height: 100%;
+                background: $main-color;
+                border: .2rem solid $main-color;
+                border-radius: 0.8rem;
+                font-size: 1.8rem;
+                font-weight: 600;
+                letter-spacing: .1rem;
+                color: $bg-color;
+                z-index: 1;
+                overflow: hidden;
+                transition: .5s;
+
+                &:hover {
+                    color: $main-color;
+
+                    &::before {
+                        width: 100%;
+                    }
+                }
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 0;
+                    height: 100%;
+                    background: $bg-color;
+                    z-index: -1;
+                    transition: 0.5s;
+                }
+
+                &:nth-child(2) {
+                    background: transparent;
+                    color: $main-color;
+
+                    &:hover {
+                        color: $bg-color;
+                    }
+
+                    &::before {
+                        background: $main-color;
+                    }
+                }
+            }
+        }
+
+        .animate {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            background: $bg-color;
+            z-index: 98;
+            animation: showRight 1s ease forwards;
+            animation-delay: calc(.3s * var(--i));
+        }
+    
+        .animate.home-img {
+            width: 50%;
+        }
     }
 }
 
@@ -44,5 +127,11 @@ html {
 @media (max-width: 520px) {
     html {
         font-size: 50%;
+    }
+}
+
+@keyframes showRight {
+    100% {
+        width: 0;
     }
 }
