--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="header">
     <a href="#" class="logo">Anes S.<span class="animate" style="--i:1;"></span></a>
 
-    <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
+    <div class="bx bx-menu" id="menu-icon" (click)="openMenu()"><span class="animate" style="--i:2;"></span></div>
 
     <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -28,6 +28,6 @@
     </div>
 
     <div class="footer-iconTop">
-        <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+        <a href="#" aria-label="Go to top"><i class="bx bx-up-arrow-alt"></i></a>
     </div>
 </footer>
