--- a/src/src/app/app.component.scss
+++ b/src/src/app/app.component.scss
@@ -35,7 +35,7 @@
             transition: .3s;
 
             &:hover,
-            &:active {
+            &.active {
                 color: $main-color;
             }
         }
@@ -100,6 +100,87 @@
             font-size: 2.4rem;
             color: $bg-color;
             transition: .5s;
+        }
+    }
+}
+
+@media (max-width: 991px) {
+    .header {
+        padding: 2rem 4%;
+    }
+
+    .footer {
+        padding: 2rem 4%;
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        background: $bg-color;
+
+        #menu-icon {
+            display: block !important;
+        }
+
+        .navbar {
+            position: absolute;
+            top: 100%;
+            left: -100%;
+            width: 100%;
+            padding: 1rem 4%;
+            background: $main-color;
+            box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+            transition: .25s ease;
+            transition-delay: .25s;
+            z-index: 1;
+
+            &.active {
+                left: 0;
+                transition-delay: 0s;
+
+                .active-nav {
+                    left: 0;
+                    transition-delay: .25s;
+                }
+
+                a {
+                    transform: translateX(0);
+                    transition-delay: .25s;
+                }
+            }
+
+            .active-nav {
+                position: absolute;
+                top: 0;
+                left: -100%;
+                width: 100%;
+                height: 100%;
+                background: $bg-color;
+                border-top: .1rem solid rgba(0, 0, 0, .2);
+                z-index: -1;
+                transition: .25s ease;
+                transition-delay: 0s;
+            }
+
+            a {
+                display: block;
+                font-size: 2rem;
+                margin: 3rem 0;
+                transform: translateX(-20rem);
+                transition: .25s ease;
+                transition-delay: 0s;
+            }
+        }
+    }
+}
+
+@media (max-width: 462px) {
+    .footer {
+        flex-direction: column-reverse;
+
+        p {
+            margin-top: 2rem;
+            text-align: center;
         }
     }
 }
