--- a/src/src/app/components/home/home.component.html
+++ b/src/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="home-content">
         <h1>Hi, I'm <span>{{ author.name }}</span><span class="animate" style="--i:2;"></span></h1>
         <div class="text-animate">
-            <h3>{{ author.role }}</h3>
+            <h2>{{ author.role }}</h2>
             <span class="animate" style="--i:3;"></span>
         </div>
         <p>
@@ -18,9 +18,9 @@
     </div>
 
     <div class="home-sci">
-        <a href="{{ author.gitHub }}"><i class="bx bxl-github"></i></a>
-        <a href="{{ author.linkedIn }}"><i class="bx bxl-linkedin"></i></a>
-        <a href="{{ author.nuget }}"><i class="bx bxs-package"></i></a>
+        <a href="{{ author.gitHub }}" aria-label="GitHub"><i class="bx bxl-github"></i></a>
+        <a href="{{ author.linkedIn }}" aria-label="LinkedIn"><i class="bx bxl-linkedin"></i></a>
+        <a href="{{ author.nuget }}" aria-label="Nuget"><i class="bx bxs-package"></i></a>
         <span class="animate" style="--i:6;"></span>
     </div>
 
