--- a/src/src/app/components/home/home.component.scss
+++ b/src/src/app/components/home/home.component.scss
@@ -28,7 +28,7 @@
             position: relative;
             width: 40rem;
 
-            h3 {
+            h2 {
                 font-size: 3.2rem;
                 font-weight: 700;
                 color: transparent;
@@ -120,6 +120,57 @@
             background: $bg-color;
             opacity: .4;
         }
+    }
+}
+
+@media (max-width: 991px) {
+    .home {
+        padding: 0 4%;
+
+        .home-imgHover {
+            pointer-events: none;
+            background: $bg-color !important;
+            opacity: 1;
+        }
+    }
+}
+
+@media (max-width: 520px) {
+    .home-content h1 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .home-sci {
+        width: 160px;
+    }
+
+    .home-sci a {
+        width: 38px;
+        height: 38px;
+    }
+}
+
+@media (max-width: 462px) {
+    .home-content h1 {
+        font-size: 5.2rem;
+    }
+}
+
+@media (max-width: 371px) {
+    .home {
+        justify-content: center;
+    }
+
+    .home-content {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .home-content h1 {
+        font-size: 5rem;
     }
 }
 
