feat: add technologies

--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -7,6 +7,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#education">Education</a>
+        <a href="#technology">Technology</a>
         <a href="#contact">Contact</a>
 
         <span class="active-nav"></span>
@@ -19,6 +20,8 @@
 <app-about></app-about>
 
 <app-education></app-education>
+
+<app-technology></app-technology>
 
 <app-contact></app-contact>
 
