feat: update to Angular 18

--- a/src/src/app/components/technology/technology.component.scss
+++ b/src/src/app/components/technology/technology.component.scss
@@ -10,5 +10,13 @@
             padding: 1rem;
             height: 6rem;
         }
+
+        &:nth-child(3n) {
+            filter: hue-rotate(350deg);
+        }
+
+        &:nth-child(3n - 1) {
+            filter: hue-rotate(10deg);
+        }
     }
 }
